--- a/.env.save
+++ b/.env.save
@@ -1,3 +1,3 @@
 PORT=5000
 SCRATEKEY = "aZop5HCHooyD3hVM"
-DATABASE_URL ="mongodb+srv://engineerwaqas189:aZop5HCHooyD3hVM@cluster0.mpcondb.mongodb.net/flok?retryWrites=true&w=majority&appName=Cluster0"
+DATABASE_URL ="mongodb+srv://saribnoor0310:nextup123@cluster0.ipzgs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
